<resources>
    <string name="app_name">My Game Collection</string>
    <string name="app_version">1.3.2</string>
    <string name="app_versiones_title">Version changes</string>
    <string name="app_versiones_texto">Version 0.9 - Beta</string>
    <string name="action_home">Home</string>
    <string name="action_settings">Options</string>
    <string name="action_editar">Edit</string>
    <string name="action_favorito">Add to favorites</string>
    <string name="action_favorito_eliminar">Delete from favorites</string>
    <string name="action_guardar">Save</string>
    <string name="action_eliminar">Delete</string>
    <string name="action_importar">Import</string>
    <string name="action_duplicar">Duplicate</string>
    <string name="action_exportar">Export</string>
    <string name="action_nuevo">New</string>
    <string name="action_buscar">Search</string>
    <string name="action_estadisticas">Statistics</string>
    <string name="action_pendientes">Pending</string>
    <string name="action_favoritos">Favorites</string>
    <string name="action_hacer_copia_seguridad">Backup</string>
    <string name="action_restaurar_copia_seguridad">Restore backup</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_inicio">My Game Library</string>
    <string name="title_activity_detalle_juego">Game Details</string>
    <string name="title_activity_nuevo_juego">Add game</string>
    <string name="title_activity_listado_juego">Search results</string>
    <string name="title_activity_cargar_caratula">Add box art</string>
    <string name="title_activity_editar_juego">Edit game</string>
    <string name="ultimos_juegos_anadidos">Last games added</string>
    <string name="title_activity_buscador">Search</string>
    <string name="title_activity_estadisitcas">Statistics</string>
    <string name="alerta_buscar_online_titulo">No results in the local database.</string>
    <string name="alerta_buscar_online_texto">Do you want to search the online database?</string>
    <string name="alerta_borrado_titulo">Delete game</string>
    <string name="alerta_borrado_texto">Are you sure you want to delete the game?</string>
    <string name="alerta_borrado_todo_titulo">Full detel</string>
    <string name="alerta_borrado_todo_texto">Are you sure you want to delete all application data?</string>
    <string name="alerta_restaurar_titulo">Restore backup</string>
    <string name="alerta_restaurar_texto">Are you sure you want to restore the backup? All data will be erased and can not be recovered</string>
    <string name="alerta_atras_nuevo_texto">Are you sure you want to go back? Unsaved data will be lost</string>
    <string name="alerta_atras_nuevo_titulo">Cancel game creation</string>
    <string name="ok">Yes</string>
    <string name="ko">No</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_splash">My Game Library</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_plataforma">Platform</string>
    <string name="sin_resultados_busqueda">There are no results for this search</string>
    <string name="juego_actualizado_ok">Game data updated</string>
    <string name="juego_actualizado_ko">Failed to update the game data</string>
    <string name="registro_contrasenas_no_coinciden">Passwords do not match</string>
    <string name="registro_email_usado">The email indicated already has a registered user</string>
    <string name="registro_correcto">It has been recorded properly. You will receive an email to activate your account.</string>
    <string name="url_buscar">http://www.mijuegoteca.com/administracion/buscador</string>
    <string name="url_iniciar_sesion">http://www.mijuegoteca.com/administracion/iniciosesion</string>
    <string name="url_registro_usuario">http://www.mijuegoteca.com/administracion/registro</string>
    <string name="url_subir_copia">http://www.mijuegoteca.com/administracion/subirCopiaSeguridad</string>
    <string name="url_insertar">http://www.mijuegoteca.com/administracion/juego/insertarExportado</string>
    <string name="url_subir_imagen">http://www.mijuegoteca.com/administracion/juego/subirImagen</string>
    <string name="url_bajar_copia">http://www.mijuegoteca.com/administracion/buscarCopiaSeguridad</string>
    <string name="url_comprobar_subir_copia">http://www.mijuegoteca.com/administracion/comprobarSubirCopiaSeguridad</string>
    <string name="url_registrar_trial">>http://www.mijuegoteca.com/administracion/registrarTrial</string>
    <string name="title_activity_registro">Sing up</string>
    <string name="contrasena">Password</string>
    <string name="etiqueta_email">Email</string>
    <string name="etiqueta_nombre">Name</string>
    <string name="hint_nombre">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_contrasena">Password</string>
    <string name="etiqueta_repite_contrasena">Repeat password</string>
    <string name="etiqueta_registro">Sing up</string>
    <string name="title_activity_favoritos">Favorites</string>
    <string name="favoritos">Favorites</string>
    <string name="title_activity_pendientes">Pending</string>
    <string name="titulo_estadisiticas_plataforma">GAMES BY PLATFORM</string>
    <string name="titulo_estadisticas_genero">GAMES BY GENRES</string>
    <string name="titulo_estadisticas_completados">GAMES COMPLETED</string>
    <string name="texto_boton_buscar_online">Online search</string>
    <string name="label_ean">Product code</string>
    <string name="label_titulo">Title</string>
    <string name="label_genero">Genre</string>
    <string name="label_plataforma">Platform</string>
    <string name="label_buscar">Search</string>
    <string name="hint_ean">Product code</string>
    <string name="hint_titulo">Game title</string>
    <string name="label_compania">Company</string>
    <string name="label_resumen">Summary</string>
    <string name="label_fecha_lanzamiento">Release</string>
    <string name="label_fecha_compra">Date of purchase</string>
    <string name="label_precio">Price</string>
    <string name="label_completado">Completed</string>
    <string name="inicio_titulo_completados">Last games completed</string>
    <string name="hint_compania">Company</string>
    <string name="hint_resumen">Resume or description of the game</string>
    <string name="hint_fecha">dd/mm/aaaa</string>
    <string name="hint_precio">Game Price</string>
    <string name="titulo_pendientes">Pending</string>
    <string name="label_comentario">Comments</string>
    <string name="label_puntuacion">Score</string>
    <string name="registro_mensaje">By registering, you will receive an email to activate your account.</string>
    <string name="title_activity_seleccionar_fichero">Select file</string>
    <string name="error_cargar_ficha_online">Error retrieving online data. Check your Internet connection or try again.</string>
    <string name="hint_comentario">Game comments</string>
    <string name="hint_puntuacion">From 0 to 100</string>
    <string name="title_activity_acerca_de">About</string>
    <string name="title_activity_anuncio">Ad</string>
    <string name="title_activity_eliminar_anuncios">Remove ads</string>
    <string name="texto_inicio_sesion">Enter your username and password.</string>
    <string name="texto_inicio_sesion_registro">If you have not yet registered, click on the button \ "Register \" to create your account to share your stack of games and make backup copies of your data in the sevidor.</string>
    <string name="texto_registro">Register to access the functions of backup on the server and share your chips on gaming.</string>
    <string name="label_formato">Format</string>
    <string name="titulo_estadisticas_formato">Games by format</string>
    <string name="label_resumen_editar">Summary</string>
    <string name="label_descripcion_editar">Description</string>
    <string name="title_activity_duplicar_juego">Duplicate game</string>
    <string name="juegos_encontrados">games found</string>
    <string name="total_juegos">Total</string>
    <string name="mensaje_datos_borrados_ok">All data clear. The application will restart</string>
    <string name="copia_restaurada_ok">Backup complete. The application will restart</string>
    <string name="copia_restaurada_ko">The backup could not be restored</string>
    <string name="fisico">Retail</string>
    <string name="digital">Digital</string>
    <string name="campo_titulo_vacio">The field TITLE can not be blank</string>
    <string name="campo_compania_vacio">The field COMPANY can not be blank</string>
    <string name="campo_fecha_lanzamiento_invalido">The field value RELEASE DATE is invalid</string>
    <string name="campo_fecha_compra_invalido">The field value PURCHASE DATE is invalid</string>
    <string name="campo_fecha_completado_invalido">The field value COMPLETED DATE is invalid</string>
    <string name="campo_puntuacion_invalido">The SCORE may not exceed 100</string>
    <string name="error_cargar_caratula">Unable to copy the cover to directory app</string>
    <string name="juego_guardado">Game saved</string>
    <string name="juego_no_guardado">Error saving game:</string>
    <string name="juego_codigo_duplicado">A game already exists with the same product code</string>
    <string name="anio_invalido">The YEAR is invalid</string>
    <string name="mes_invalido">The MONTH is invalid</string>
    <string name="dia_invalido">The DAY is invalid</string>
    <string name="juego_anadido_favoritos">Game added to favorites</string>
    <string name="juego_ya_anadido_favoritos">This game is already in favorites</string>
    <string name="juego_no_anadido_favoritos">Could not add the game to favorites</string>
    <string name="juego_eliminado_favoritos">Game removed from favorites</string>
    <string name="juego_no_eliminiado_favoritos">Could not eliminate game from favorites</string>
    <string name="juego_eliminado">Game deleted</string>
    <string name="juego_no_eliminado">Could not delete the game</string>
    <string name="no_data_backup">There is no data to save in the backup</string>
    <string name="zip">Creating file...</string>
    <string name="buscando">Searching...</string>
    <string name="valor_total">Value</string>
    <string name="valor_medio">AVG game price</string>
    <string name="titulo_estadisiticas_resumen">Summary</string>
    <string name="label_clasificacion">Clasificación</string>
    <string name="label_idioma">Idioma</string>
    <string name="pref_title_view">Game detail view format</string>
    <string name="pref_description_view">See the detail of the game with the large image format</string>
    <string name="title_activity_inicio_masonry">All my games</string>
    <string name="action_grid">Grid</string>
    <string name="novedades">News</string>
    <string name="unzip">Restoring backup ...</string>
    <string name="alerta_atras_editar_titulo">Cance game edition</string>
    <string name="currency">Currency</string>
    <string name="si">Yes</string>
    <string name="title_activity_igdblogin">IGDBLogin</string>
    <string name="juegos">games</string>
    <string name="pref_description_orden_ultimos_anadidos">Sort the latest games added by date of purchase</string>
    <string name="pref_title_orden_ultimos_anadidos">Last added order</string>
    <string name="title_activity_twitter_config">Login with Twitter</string>
    <string name="share_on_twitter">Share on Twitter</string>
    <string name="share_twitter_intro">Log in with Twitter to share every new game that you add to your collection and when you complete a game</string>
    <string name="share_twitter_login_ok">Successfully logged in with Twitter</string>
    <string name="share_twitter_login_ko">Error logging in with Twitter. Try again after a few seconds.</string>
</resources>