<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context=".NuevoJuego">

    <ScrollView
        android:id="@+id/scrollView_detalle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="vertical">

            <LinearLayout
                android:id="@+id/datos1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image_view_caratula_nuevo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:onClick="cargarCaratula"
                        android:src="@drawable/cargar_caratula" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/datos1_1_detalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edit_titulo_nuevo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/hint_titulo"
                        android:inputType="textNoSuggestions|textCapWords"
                        android:scrollHorizontally="false" />

                    <AutoCompleteTextView
                        android:id="@+id/autoComplete_compania_nuevo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/hint_compania"
                        android:inputType="textNoSuggestions|textCapWords"
                        android:scrollHorizontally="false" />

                    <Spinner
                        android:id="@+id/spinner_genero_nuevo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:spinnerMode="dialog" />

                    <Spinner
                        android:id="@+id/spinner_plataforma_nuevo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:spinnerMode="dialog" />

                    <Spinner
                        android:id="@+id/spinner_clasificacion_nuevo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:spinnerMode="dialog" />

                    <Spinner
                        android:id="@+id/spinner_idioma_nuevo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:spinnerMode="dialog" />

                    <Spinner
                        android:id="@+id/spinner_formato_nuevo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:padding="0dp"
                        android:spinnerMode="dialog" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/datos2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_resumen_nuevo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:ems="10"
                    android:hint="@string/hint_resumen"
                    android:inputType="textMultiLine|textCapSentences"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0">

                    <TextView
                        android:id="@+id/text_ean_nuevo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/label_ean"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageButton
                            android:id="@+id/botton_ean_buscador"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:onClick="capturarCodigo"
                            android:src="@drawable/boton_codigo_barras" />

                        <EditText
                            android:id="@+id/edit_ean_nuevo"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/hint_ean"
                            android:inputType="number"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0">

                    <TextView
                        android:id="@+id/text_fecha_lanzamiento_nuevo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/label_fecha_lanzamiento"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_fecha_lanzamiento_nuevo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/hint_fecha"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/text_fecha_compra_detalle_nuevo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/label_fecha_compra"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_fecha_compra_nuevo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/hint_fecha"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0">

                    <TextView
                        android:id="@+id/text_precio_nuevo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/label_precio"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_precio_nuevo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/hint_precio"
                        android:inputType="numberDecimal"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0">

                    <TextView
                        android:id="@+id/text_completado_nuevo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/label_completado"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/check_completado_nuevo"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:onClick="activarFechaCompletado" />

                        <EditText
                            android:id="@+id/edit_fecha_completado_nuevo"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:ems="10"
                            android:enabled="false"
                            android:hint="@string/hint_fecha"
                            android:inputType="number"
                            android:maxLength="10"
                            android:textSize="15sp">

                            <requestFocus />
                        </EditText>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_comentario_nuevo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0">

                    <TextView
                        android:id="@+id/text_comentario_nuevo_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/label_comentario"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_comentario_nuevo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_comentario"
                        android:inputType="textMultiLine|textCapSentences" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_puntuacion_nuevo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_puntuacion_nuevo_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/label_puntuacion"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_puntuacion_nuevo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_puntuacion"
                        android:inputType="number"
                        android:maxLength="3" />

                </LinearLayout>
            </LinearLayout>

            <!--
                 <Button
                android:id="@+id/button_guardar_nuevo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:onClick="crearJuego"
                android:text="Guardar" />
            -->

        </LinearLayout>
    </ScrollView>

</RelativeLayout>